--- a/style.scss
+++ b/style.scss
@@ -90,6 +90,7 @@ body{
         justify-content: space-between;
         img{
             width: 80px;
+            user-select: none;
         }
 
         ul{
